<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sarahcreasman.writestuff.MainActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="503dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_toDoList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="128dp"
                android:text="@string/lbl_todo"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/lbl_notes"
                app:layout_constraintTop_toBottomOf="@id/btn_toDoList" />

            <Button
                android:id="@+id/btn_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/lbl_timer"
                app:layout_constraintTop_toBottomOf="@id/btn_notes" />

            <Button
                android:id="@+id/btn_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/lbl_names"
                app:layout_constraintTop_toBottomOf="@id/btn_timer" />

            <Button
                android:id="@+id/btn_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/lbl_feedback"
                app:layout_constraintTop_toBottomOf="@id/btn_names" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
