<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sarahcreasman.writestuff.Feedback">

    <TextView
        android:id="@+id/feedback_lblName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_name"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/feedback_inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/feedback_lblName"/>
    <TextView
        android:id="@+id/feedback_lblEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_email"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/feedback_inputName" />
    <EditText
        android:id="@+id/feedback_inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/feedback_lblEmail"/>
    <TextView
        android:id="@+id/feedback_lblSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_subject"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/feedback_inputEmail" />
    <Spinner
        android:id="@+id/feedback_spinSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/feedback_lblSubject"/>
    <TextView
        android:id="@+id/feedback_lblMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_message"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/feedback_spinSubject" />

    <EditText
        android:id="@+id/feedback_inputMessage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/feedback_lblMessage" />

    <Button
        android:id="@+id/feedback_btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_send"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/feedback_inputMessage"/>
    <Button
        android:id="@+id/feedback_btnClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_clear"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/feedback_btnSend" />


</android.support.constraint.ConstraintLayout>
