<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sarahcreasman.writestuff.NameDictionary">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/name_genderGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/name_genderMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/name_male"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/name_genderFemale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/name_female"
            app:layout_constraintStart_toEndOf="@+id/name_genderMale" />

        <RadioButton
            android:id="@+id/name_genderEither"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/name_neutral"
            app:layout_constraintStart_toEndOf="@+id/name_genderEither" />
    </RadioGroup>

    <Button
        android:id="@+id/name_btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_search"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/name_genderGroup" />

    <ListView
        android:id="@+id/names_listView"
        android:layout_width="368dp"
        android:layout_height="399dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_btnSearch" />


    <!--
    <ScrollView
        android:layout_width="368dp"
        android:layout_height="399dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_btnSearch">

        <TextView
            android:id="@+id/names_displayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="List here"
            android:visibility="visible"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    </ScrollView> -->


</android.support.constraint.ConstraintLayout>
